--- a/src/InternshipManagementSystem.Domain.Shared/Localization/InternshipManagementSystem/en.json
+++ b/src/InternshipManagementSystem.Domain.Shared/Localization/InternshipManagementSystem/en.json
@@ -4,6 +4,11 @@
     "AppName": "InternshipManagementSystem",
     "Menu:Home": "Home",
     "Welcome": "Welcome",
-    "LongWelcomeMessage": "Welcome to the application. This is a startup project based on the ABP framework. For more information, visit abp.io."
+    "LongWelcomeMessage": "Welcome to the application. This is a startup project based on the ABP framework. For more information, visit abp.io.",
+    "Permission:ExamAttempts": "Exam Attempts",
+    "Permission:Create": "Create",
+    "Permission:Edit": "Edit",
+    "Permission:Delete": "Delete",
+    "Permission:View": "View"
   }
 }
