Add new Api and dataseed

--- a/src/InternshipManagementSystem.Domain.Shared/Localization/InternshipManagementSystem/ar.json
+++ b/src/InternshipManagementSystem.Domain.Shared/Localization/InternshipManagementSystem/ar.json
@@ -9,6 +9,12 @@
     "Permission:Create": "إنشاء",
     "Permission:Edit": "تعديل",
     "Permission:Delete": "حذف",
-    "Permission:View": "عرض"
+    "Permission:View": "عرض",
+    "Permission:Users": "المستخدمين",
+    "Permission:ManageRoles": "إدارة الأدوار",
+    "Permission:Admin": "مسؤول النظام",
+    "Permission:Supervisor": "مشرف تدريب",
+    "Permission:Trainee": "متدرب"
+
   }
 }
